[package]
name = "dakv_logger"
version = "0.1.5"
authors = ["dkkb <dabkb@aol.com>"]
edition = "2018"
description = "Logger for dakv"
license = "MIT"
homepage = "https://github.com/dakv/logger"
keywords = ["logger", "log"]
categories = ["logger", "log"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
max_level_debug = []
max_level_error = []
max_level_info = []
max_level_off = []
max_level_trace = []
max_level_warn = []

release_max_level_debug = []
release_max_level_error = []
release_max_level_info = []
release_max_level_off = []
release_max_level_trace = []
release_max_level_warn = []

[dependencies]
slog = "2.5.2"
slog-term = "2.5.0"
slog-async = "2.4.0"
slog-scope = "4.3.0"
slog-envlogger = "2.2.0"
chrono = "0.4"
once_cell = "1.4.0"